# tgbot_template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: .env.example  cli.py  exceptions.py  gunicorn.conf.py  main.py
src/bot/: __init__.py  bot.py  handlers.py
src/core/: config.py  loggers.py  sentry.py
src/schemas/: bot.py  entity.py
src/services/: service.py
src/storages/: pg_storage.py  redis_storage.py
