[tool.poetry]
name = "tgbot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = {extras = ["loguru"], version = "^2.22.0"}
loguru = "^0.7.3"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
pytelegrambotapi = "^4.26.0"
aiohttp = "^3.11.13"
redis = "^5.2.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.38"
typer = "^0.15.2"
uvloop = "^0.21.0"
uvicorn = "^0.34.0"
uvicorn-worker = "^0.3.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
